# src/routes/user-route.js
@@ -2,8 +2,11 @@
 
 const express = require('express');
 const router = express.Router();
-const controller = require('../controllers/item-controller');
+const controller = require('../controllers/user-controller');
 const authService = require('../auth/auth-service');
+
+router.post('/login', controller.login);
+router.post('/refresh-login', authService.authorize, controller.refreshLogin);
 
 router.get('/', authService.authorize, controller.find);
 router.post('/', authService.authorize, controller.create);
