# src/swagger/swagger.json
@@ -11,7 +11,7 @@
       "url": "https://opensource.org/licenses"
     }
   },
-  "host": "node-mongo-project.herokuapp.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "tags": [
     {
@@ -762,7 +762,7 @@
         "deprecated": false
       }
     },
-    "/v1/user/": {
+    "/user/": {
       "get": {
         "tags": [
           "user-controller"
@@ -793,9 +793,54 @@
           }
         },
         "deprecated": false
-      }
+      },
+      "post": {
+        "tags": [
+          "user-controller"
+        ],
+        "summary": "create",
+        "operationId": "createPOST",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "User",
+            "description": "User",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "deprecated": false
+      }      
     },
-    "/v1/user/login": {
+    "/user/login": {
       "post": {
         "tags": [
           "user-controller"
@@ -842,7 +887,7 @@
         "deprecated": false
       }
     },
-    "/v1/user/password": {
+    "/user/password": {
       "put": {
         "tags": [
           "user-controller"
@@ -886,7 +931,7 @@
         "deprecated": false
       }
     },
-    "/v1/user/{id}": {
+    "/user/{id}": {
       "get": {
         "tags": [
           "user-controller"
@@ -1363,9 +1408,9 @@
     "Login": {
       "type": "object",
       "properties": {
-        "username": {
+        "email": {
           "type": "string",
-          "example": "abc123456"
+          "example": "abc@123456.com"
         },
         "password": {
           "type": "string",
